src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}
@font-face {
	font-family: Thiccboi;
	src: url(../../public/regular.ttf);
}

body {
	font-family: Thiccboi, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
		sans-serif;
	background-color: #f8f8fb;
}
/* @media (prefers-color-scheme: dark) {
	body {
		background-color: #141625;
		color: #ffffff;
	}
} */
body {
	background-color: #141625;
	color: #ffffff;
}
.select__option {
	color: black;
}
.label {
	font-weight: 300;
}

